--- a/TankiViewOpenPage/MainWindow.xaml
+++ b/TankiViewOpenPage/MainWindow.xaml
@@ -25,7 +25,7 @@
                 </LinearGradientBrush>
             </TextBox.OpacityMask>
         </TextBox>
-        <Button Content="GO" HorizontalAlignment="Left" Margin="344,319,0,0" VerticalAlignment="Top" Width="30" Height="30" Background="#FF2F5255"/>
+        <Button Content="GO" HorizontalAlignment="Left" Margin="344,319,0,0" VerticalAlignment="Top" Width="30" Height="30" Background="#FF2F5255" Click="Button_Click"/>
 
     </Grid>
 </Window>
